# guibot

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
guibot/: calibrator.py  config.py  controller.py  errors.py  fileresolver.py  finder.py  guibot.py  guibot_simple.py  inputmap.py  location.py  match.py  region.py  target.py
tests/: test_fileresolver.py  test_target.py
